fixed top margin on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,7 +102,7 @@ header h1 {
   min-height: 400px;
   display: flex;
   max-width: 1000px;
-  margin: 80px auto 20px;
+  margin: 80px auto 10px;
   border-radius: 2%;
   justify-content: space-evenly;
   align-items: center;
@@ -385,7 +385,7 @@ footer p {
   }
 
   .bio-container {
-    margin-top: 60px;
+    margin-top: 100px;
   }
 
   .bio-container::before, .skills-container::before, .project-container::before {
